@@ -37,6 +37,7 @@
 #include <string.h>
 
 #include <mach/kern_return.h>
+#include <machine/locore.h>
 #include <machine/vm_param.h>
 #include <kern/assert.h>
 #include <kern/debug.h>
